<resources>
    <string name="app_name">Care Giver</string>
    <string name="notification_name">New Zeal Specialist</string>
    <string name="back">Back</string>
    <string name="purpose">&#160;purpose&#160;</string>
    <string name="calendar">Calendar</string>
    <string name="ok">OK</string>
    <string name="by">&#160;By&#160;</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    <string name="updating">Updating…</string>
    <string name="with_text">&#160;with&#160;</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tasks">My Tasks</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sync">Sync</string>
    <string name="my_tasks">My Tasks</string>
    <string name="header_creating_task">Creating Task</string>
    <string name="check_in_care">Check In Care</string>
    <string name="check_in_care_service">Check-In Care</string>
    <string name="header_task_details">Task Details</string>
    <string name="user_ratings">Overall User Ratings</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="close">Close</string>
    <string name="complete">Complete</string>
    <string name="feedback">Feedback</string>
    <string name="clients">Clients</string>
    <string name="clientdetails">Client Details</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="take_me_in">Take Me In</string>
    <string name="log_in">Logging In…</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot">Forgot?</string>
    <string name="for_text">&#160;for&#160;</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="reschedule">Reschedule</string>
    <string name="no">No</string>
    <string name="new_notification">New Notifications Available</string>
    <string name="new_activity">New Activities Available</string>
    <string name="new_clients">New Clients Available</string>
    <string name="upload_images">Upload Images successfully</string>
    <string name="upload_images_sucees">Uploaded</string>
    <string name="error_confirm_password">Invalid Confirm Password</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_contact_no">Invalid Contact Number</string>
    <string name="error_field_required">This Field is Required</string>
    <string name="error">Something went wrong. Try Again!!!</string>
    <string name="error_same_password">New and Old Password cannot be same</string>
    <string name="process_login">Authenticating…</string>
    <string name="success_login">Login Success…</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="invalid_date">Select a Future Date</string>
    <string name="warning_profile_pic">Profile Picture Needed</string>
    <string name="warning_internet">Please check your internet connection and try again</string>
    <string name="warning_internet_alert">No internet connection …</string>
    <string name="GPSAlertDialogTitle">GPS Title</string>
    <string name="GPSAlertDialogMessage">GPS is searching</string>
    <string name="select_image">Please Click + Button To Add Image</string>
    <string name="age">Age</string>
    <string name="health_condition">Health Condition</string>
    <string name="notes_text">Notes</string>
    <string name="address">Address</string>
    <string name="mobNo">Mobile Number</string>
    <string name="map">Map</string>
    <string name="getDirection">Get Direction</string>
    <string name="clientNameModel">Customer</string>
    <string name="dependentName">Care Receipent</string>
    <string name="title">Activity Description</string>
    <string name="services">Service</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="hintPwd">Password</string>
    <string name="name">Name of service giver</string>
    <string name="place">Place</string>
    <string name="signOut">SIGN OUT</string>
    <string name="done_button">Done</string>
    <string name="upload_button">Save Images</string>
    <string name="noFeatures">No Features</string>
    <string name="yrs"> Yrs</string>
    <string name="yes">Yes</string>
    <string name="separator">  |  </string>
    <string name="attachments">Attachments</string>
    <string name="upload">Upload</string>
    <string name="noClients">No Clients</string>
    <string name="noFeedbacks">No Feedbacks</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="noActivities">No Information Available for Selected Date</string>
    <string name="features">Features</string>
    <string name="loading">Loading…</string>
    <string name="location">Location</string>
    <string name="uploading_image">Uploading image..</string>
    <string name="update_profile_image">Profile picture updated</string>
    <string name="error_load_images">Error Loading Data. Try Again!!!</string>
    <string name="milestones">Services Involved in &#160;</string>
    <string name="milestone">Milestone</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="string_continue">Continue</string>
    <string name="create_password">Create a Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="activity">Activity</string>
    <string name="my_account">My Account</string>
    <string name="my_account_edit">Edit My Account</string>
    <string name="activity_month">Monthly</string>
    <string name="activity_list">List</string>
    <string name="logout">Logout</string>
    <string name="at">at</string>
    <string name="new_text">New</string>
    <string name="enter_captcha">Valid Captcha required</string>
    <string name="enter_captcha_text">Enter Captcha</string>
    <string name="captcha_cs">*Captcha is case sensitive</string>
    <string name="verify_identity_password">Verifying…</string>
    <string name="your_details_saved">Your Details Saved</string>
    <string name="dependents">Dependents</string>
    <string name="search_contacts">Search from Contacts</string>
    <string name="dependent_name">Dependent Name</string>
    <string name="dependent_details">Dependent Details</string>
    <string name="relation">Relationship</string>
    <string name="illness">Any Major Illness</string>
    <string name="notes">Notes for Caregivers</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="view_dashboard">View Dashboard</string>
    <string name="info_discard">All your Information will be Deleted, OK to Proceed?</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="checkin_care_service">Please Select other service</string>
    <string name="dpndnt_medical_info_saved">Dependent Medical Details Saved</string>
    <string name="dpndnt_details_saved">Dependent Details Saved</string>
    <string name="delete_info">All your Information will be Deleted, OK to Proceed?</string>
    <string name="account_updated">Account updated successfully</string>
    <string name="no_changes">No Changes to Save</string>
    <string name="confirm_logout">Are you sure want to Exit?</string>
    <string name="not_found">NOT FOUND</string>
    <string name="upcoming_activity">Upcoming Activity</string>
    <string name="completed_activity">Completed Activity</string>
    <string name="completed_task">Complete Task</string>
    <string name="buy_services">Buy Services</string>
    <string name="buy_services_large_text">Pay as you go services that can be easily added to an existing package</string>
    <string name="date_time">21-Dec-15 at 6:00pm</string>
    <string name="paytm">Paytm</string>
    <string name="space">&#160;</string>
    <string name="add_message">Add a Message</string>
    <string name="on">&#160;On&#160;</string>
    <string name="has_created">&#160;has created&#160;</string>
    <string name="has_updated">&#160;has Updated&#160;</string>
    <string name="to">&#160;for&#160;</string>
    <string name="activities">Activities</string>
    <string name="tasks">Tasks</string>
    <string name="hyphen">-</string>
    <string name="service_category">Service Category</string>
    <string name="scheduled_to">&#160;and Scheduled At&#160;</string>
    <string name="resetted_password">New password has been sent to your E-mail id</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_file">Delete File</string>
    <string name="unsaved_images">Unsaved Changes</string>
    <string name="save_image">Please Save the images</string>
    <string name="confirm_delete_image">Do you want to delete this image?</string>
    <string name="sync_data">Please Sync to Update Clients</string>
    <string name="sync_data_activity">Please Sync to Update Activities</string>
    <string name="confirm_delete_file">Do you want to delete this file?</string>
    <string name="confirm_unsaved_images">Some Images are not Saved, Delete Them?</string>
    <string name="confirm_unsaved_files">Some Files are not Saved, Delete Them?</string>
    <string name="file_deleted">File Deleted</string>
    <string name="attach_file">Attach File</string>
    <string name="click_attach">Click to Attach</string>
    <string name="create_new">Create New</string>
    <string name="access_storage">Access to External Storage</string>
    <string name="access_storage_false">We need Access to External Storage to Proceed</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="qunatity">Quantity</string>
    <string name="read_more">read more…</string>
    <string name="account_success_header">Account Successfully Created</string>
    <string name="service_added">Services Added Successfully</string>
    <string name="register_success">Account Registered Successfully</string>
    <string name="activity_closed">Activity Closed Successfully</string>
    <string name="activity_added">Activity Created Successfully</string>
    <string name="activity_updated">Activity Updated Successfully</string>
    <string name="milestone_updated">Milestone Saved</string>
    <string name="image_upload">Images Saved</string>
    <string name="data_upload">Data Upload Successfully</string>
    <string name="uploading">Uploading…</string>
    <string name="verify_identity">Taking you In…</string>
    <string name="uploading_profile_pic">Setting Profile Images…</string>
    <string name="error_register">Error in uploading with server. Please try again Later!!!</string>
    <string name="error_register_image">Error in Setting Profile picture. Please try again Later!!!</string>
    <string name="error_service">Select a Valid Service</string>
    <string name="error_service_zero">Select a Valid Service</string>
    <string name="dependent_data_lost">Something went wrong, Please create Dependent again</string>
    <string name="no_memory_camera">No storage mounted to save camera image</string>
    <string name="image_write_failed">Sorry!!! we may have lost your Profile Image</string>
    <string name="invalid_login">Invalid Credentials</string>
    <string name="no_push_actiity_added">Activity Added. Not able to Notify the Customer</string>
    <string name="no_push_actiity_updated">Activity Updated. Not able to Notify the Customer</string>
    <string name="error_client">Select a Valid Client</string>
    <string name="error_medicines">Check Medicine Details</string>
</resources>