<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextUserName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.hdfc.views.CheckView
                android:id="@+id/checkview2"
                android:layout_width="130sp"
                android:layout_height="70sp"
                android:layout_marginLeft="5dp" />

            <ImageButton
                android:id="@+id/reloadCaptcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:contentDescription="@string/loading"
                android:src="@drawable/captcha_reload" />

        </LinearLayout>

        <TextView
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_captcha_text" />

        <EditText
            android:id="@+id/editTextCaptcha"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captcha_cs"
            android:textColor="@color/red" />

    </LinearLayout>
</ScrollView>