<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_header">

    <include
        android:id="@+id/include"
        layout="@layout/header_login" />

    <EditText
            android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
        android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/hintPwd"
            android:inputType="textPassword"
        android:padding="@dimen/padding_general"
            android:singleLine="true" />


    <Button
        android:id="@+id/id_forgot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_general"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/forgot"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/id_forgot"
        android:layout_margin="@dimen/margin_general"
        android:background="@drawable/button_white_blue_border"
        android:onClick="validateLogin"
        android:text="@string/take_me_in"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkBlue" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/editPassword"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="14dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_general" />

</RelativeLayout>
