<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_common" />

    <TextView
        style="@style/HeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/header_creating_task"
        android:textColor="@color/new_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/colorful_textview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general"
                android:text="@string/clientNameModel"
                android:textColor="@android:color/secondary_text_dark" />

            <AutoCompleteTextView
                android:id="@+id/inputSearch"
                style="@style/AutoCompleteTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/client_name"
                android:drawablePadding="@dimen/padding_general"
                android:drawableStart="@drawable/client_name"
                android:inputType="textVisiblePassword"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general" />

            <requestFocus />

            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general"
                android:text="@string/dependentName"
                android:textColor="@android:color/secondary_text_dark" />

            <Spinner
                android:id="@+id/spindependentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:padding="10dp"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general">

            </Spinner>

            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general"
                android:text="@string/service_category"
                android:textColor="@android:color/secondary_text_dark" />

            <Spinner
                android:id="@+id/inputSearchServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/service_giver_agent_icon"
                android:drawablePadding="@dimen/padding_general"
                android:drawableStart="@drawable/service_giver_agent_icon"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general" />
            <!--  <requestFocus/>-->

            <TextView
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general"
                android:text="@string/services"
                android:textColor="@android:color/secondary_text_dark" />

            <Spinner
                android:id="@+id/spinServiceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/service_giver_agent_icon"
                android:drawablePadding="@dimen/padding_general"
                android:drawableStart="@drawable/service_giver_agent_icon"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general" />

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general"
                android:text="@string/title"
                android:textColor="@android:color/secondary_text_dark" />

            <EditText
                android:id="@+id/editTextTitle"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/add_note"
                android:drawablePadding="@dimen/padding_general"
                android:drawableStart="@drawable/add_note"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_general"
                android:paddingRight="@dimen/padding_general" />


            <EditText
                android:id="@+id/editDob"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/calendar_date_picker"
                android:drawablePadding="@dimen/padding_general"
                android:drawableStart="@drawable/calendar_date_picker"
                android:focusableInTouchMode="false"
                android:hint="@string/dateAndTime"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <RelativeLayout
                android:id="@+id/loadingPanel"
                style="@style/GenericProgressBackground"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone">

                <ProgressBar style="@style/GenericProgressIndicator" />
            </RelativeLayout>

            <Button
                android:id="@+id/textViewDoneHeaderCreatingTask"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_success"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>