<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/buttonMyTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/my_tasks" />

            <ImageView
                android:id="@+id/buttonClients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/clients" />

            <ImageView
                android:id="@+id/buttonFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_general"
                android:layout_weight="1"
                android:background="@drawable/button_back_trans"
                android:padding="@dimen/padding_general"
                android:src="@mipmap/feedback" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="15dp">

            <TextView
                android:id="@+id/textViewTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_tasks"
                android:textSize="9sp" />


            <TextView
                android:id="@+id/textViewClients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_clients"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/textViewFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_feedback"
                android:textSize="9sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>

