<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/header_common" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewFeedback"
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/feedback"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/buttonlogout"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/account_type"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageViewLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textViewFeedback"
                android:background="@drawable/colorful_textview"
                android:padding="15dp" />

            <LinearLayout
                android:id="@+id/linearLayoutUserRatings"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/imageViewLine"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/loading"
                    android:paddingTop="12dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.5"
                    android:paddingTop="12dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewSmallStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:paddingStart="35dp"
                        android:text="@string/user_ratings" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/CustomRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:numStars="5" />

                    <TextView
                        android:id="@+id/name"
                        style="@style/LabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="7dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@android:id/empty"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayoutUserRatings"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/noFeedbacks"
                android:visibility="gone" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayoutUserRatings"
                android:layout_margin="10dp"
                android:divider="@color/blue"
                android:dividerHeight="1dp"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>